--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -94,3 +94,26 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 #accordion-module .accordion-button::after {
   display: none;
 }
+
+/* #accordionClass .accordion-item {
+  border: 1px solid red;
+} */
+
+#accordionClass .accordion {
+  box-shadow: 0px 20px 30px -5px rgba(0, 0, 0, 0.25);
+}
+
+#accordionClass .accordion-button {
+  color: #495961;
+  font-size: 1.2em;
+  font-weight: 400;
+  outline: none;
+  box-shadow: none;
+}
+
+#accordionClass p {
+  color: #495961;
+  font-size: 1.1em;
+  font-weight: 300;
+  margin: 20px;
+}
