--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -101,6 +101,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 #accordionClass .accordion {
   box-shadow: 0px 20px 30px -5px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 #accordionClass .accordion-button {
