--- a/static-front-end/css/index.css
+++ b/static-front-end/css/index.css
@@ -1,5 +1,22 @@
+.main-header-page  .title-header-page {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #00131d;
+  opacity: 0.7;
+}
+
+.main-header-page  .description-header-page {
+  color: #495961;
+  font-size: 1.1em;
+  font-weight: 300;
+}
+
+.main-header-page .progress {
+  max-width: 600px;
+}
+
 .header-class h1 {
-  font-size: 1.875rem;
+  font-size: 1.675rem;
   font-weight: 700;
   color: #00131d;
   opacity: 0.7;
@@ -89,4 +106,60 @@
   font-size: 1.1em;
   font-weight: 300;
   margin: 20px;
+}
+
+@media (max-width: 992px) {
+  .navigation-content.min-height_100 {
+    min-height: fit-content !important;
+    height: fit-content !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-header-page .progress {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 500px) {
+  .main-header-page  .title-header-page {
+    font-size: 1.5em;
+  }
+
+  .main-header-page  .description-header-page {
+    font-size: 0.875em;
+  }
+
+  .header-class h1 {
+    font-size: 1.3rem;
+  }
+
+  .header-class h1:after {
+    height: 0.15rem;
+  }
+
+  .header-class p {
+    margin-bottom: 1em !important;
+  }
+
+  #accordion-module {
+    max-width: fit-content;
+    padding: 0 20px;
+    min-width: auto !important;
+  }
+
+  #accordion-module .accordion-button,
+  #accordion-module .accordion-button.collapsed,
+  #accordion-module .accordion-button:hover {
+    font-size: 0.875em;
+  }
+
+  #accordionClass p {
+    margin: 0;
+    font-size: 1em;
+  }
+
+  #accordionClass .accordion-button {
+    font-size: 1em;
+  }
 }
