--- a/front-end/styles/index.css
+++ b/front-end/styles/index.css
@@ -1,30 +1,22 @@
-*, *:after, *:before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.main-header-page  .title-header-page {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #00131d;
+  opacity: 0.7;
 }
 
-body {
-  font-weight: 400;
-  line-height: 1.5;
-  min-height: 100vh;
+.main-header-page  .description-header-page {
+  color: #495961;
+  font-size: 1.1em;
+  font-weight: 300;
 }
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  -webkit-font-smoothing: antialiased;
-}
-
-.min-height_100 {
-  min-height: 100vh;
+.main-header-page .progress {
+  max-width: 600px;
 }
 
 .header-class h1 {
-  font-size: 1.875rem;
+  font-size: 1.675rem;
   font-weight: 700;
   color: #00131d;
   opacity: 0.7;
@@ -95,10 +87,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   display: none;
 }
 
-/* #accordionClass .accordion-item {
-  border: 1px solid red;
-} */
-
 #accordionClass .accordion {
   box-shadow: 0px 20px 30px -5px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -118,4 +106,60 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-size: 1.1em;
   font-weight: 300;
   margin: 20px;
+}
+
+@media (max-width: 992px) {
+  .navigation-content.min-height_100 {
+    min-height: fit-content !important;
+    height: fit-content !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-header-page .progress {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 500px) {
+  .main-header-page  .title-header-page {
+    font-size: 1.5em;
+  }
+
+  .main-header-page  .description-header-page {
+    font-size: 0.875em;
+  }
+
+  .header-class h1 {
+    font-size: 1.3rem;
+  }
+
+  .header-class h1:after {
+    height: 0.15rem;
+  }
+
+  .header-class p {
+    margin-bottom: 1em !important;
+  }
+
+  #accordion-module {
+    max-width: fit-content;
+    padding: 0 20px;
+    min-width: auto !important;
+  }
+
+  #accordion-module .accordion-button,
+  #accordion-module .accordion-button.collapsed,
+  #accordion-module .accordion-button:hover {
+    font-size: 0.875em;
+  }
+
+  #accordionClass p {
+    margin: 0;
+    font-size: 1em;
+  }
+
+  #accordionClass .accordion-button {
+    font-size: 1em;
+  }
 }
