feat: getting username from backend request

--- a/front-end/components/course.html
+++ b/front-end/components/course.html
@@ -11,13 +11,14 @@
     </div>
     <div class="col-lg-7 col-12 d-flex flex-column justify-content-center">
       <div class="main-header-page ps-sm-5 py-5 mb-sm-5 px-4">
-        <h1 class="title-header-page">Olá, [nome]</h1>
+        <h1 class="title-header-page">Olá, <span id="name"></span></h1>
         <p class="description-header-page mt-2">
           Bem-vindo(a) ao curso de educação financeira. Acompanhe seu progresso
           abaixo.
         </p>
         <div class="progress mt-3">
           <div
+            id="progress"
             class="progress-bar progress-bar-striped progress-bar-animated"
             role="progressbar"
             aria-label="Example with label"
