--- a/front-end/styles/index.css
+++ b/front-end/styles/index.css
@@ -87,6 +87,11 @@
   display: none;
 }
 
+#accordion-module .accordion-button:disabled {
+  pointer-events: none;
+  color: #e4e4e4;
+}
+
 #accordionClass .accordion {
   box-shadow: 0px 20px 30px -5px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -99,6 +104,11 @@
   font-weight: 400;
   outline: none;
   box-shadow: none;
+}
+
+#accordionClass .accordion-button:disabled {
+  pointer-events: none;
+  color: #aaadaf;
 }
 
 #accordionClass p {
